...
              child: const Text('Send'),
            )
          : OutlinedButton(
              onPressed: () {
                // Invite
              },
              child: const Text('Invite'),
            ),
    );
  }
}

// ============================================================================
...
